edited header styler

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -46,7 +46,7 @@ body {
 }
 
 .header {
-  background-color: salmon;
+  background-color: skyblue;
   flex-basis: 35dvh;
   display: flex;
   flex-direction: column;
