--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -50,7 +50,7 @@ body {
 }
 
 .header {
-  background-color: salmon;
+  background-color: skyblue;
   flex-basis: 35dvh;
   display: flex;
   flex-direction: column;
