--- a/src/style/main.css
+++ b/src/style/main.css
@@ -31,14 +31,14 @@ body {
   font-family: geo;
   line-height: 1.5;
   display: flex;
-  height: 100dvh;
-  width: 100dvw;
+  min-height: 100dvh;
   display: grid;
   place-content: center;
+  overflow: hidden;
 }
 
 .container {
-  height: 100dvh;
+  min-height: 100dvh;
   width: 100dvw;
   display: flex;
   flex-direction: column;
@@ -47,7 +47,7 @@ body {
 
 .header {
   background-color: skyblue;
-  flex-basis: 35dvh;
+  flex-basis: 35rem;
   display: flex;
   flex-direction: column;
   align-items: center;
