--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -164,7 +164,7 @@ body {
       align-items: center;
     }
   }
-  li:not(:last-child) {
+  li {
     border-right: 1px solid rgb(150, 150, 150, 0.5);
     @media (width <740px) {
       border-right: none;
@@ -204,6 +204,9 @@ body {
   &__flag-image {
     height: 100%;
     object-fit: cover;
+  }
+  &__lastchild {
+    border-right: none !important;
   }
 }
 
