changed some style css

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -34,7 +34,7 @@ body {
   min-height: 100dvh;
   display: grid;
   place-content: center;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 .container {
