--- a/src/style/main.css
+++ b/src/style/main.css
@@ -209,7 +209,7 @@ body {
 
 #map {
   background: linear-gradient(to right, rgba(36, 99, 235, 0.2), rgba(79, 70, 229, 0.2));
-  flex-basis: 65dvh;
+  flex-basis: 100rem;
   animation: colorise 1s infinite linear;
 }
 
@@ -267,4 +267,20 @@ body {
 
 .hidden {
   display: none !important;
+}
+
+.copy {
+  z-index: 9999;
+  padding: 1rem;
+  background-color: #fff;
+  display: grid;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  place-content: center;
+  font-size: 1.4rem;
+  color: var(--black-stete);
+}
+.copy a {
+  color: currentColor;
 }/*# sourceMappingURL=main.css.map */
